prepare to remove reflection

--- a/pokemonbean/resources_pk/rom/web/html/items/itemforbattle.html
+++ b/pokemonbean/resources_pk/rom/web/html/items/itemforbattle.html
@@ -200,7 +200,7 @@
 			</c:if>
 			<c:if condition="!boostStatisTypes.isEmpty()">
 				<c:message value="msg_itemforbattle,boost_types"/>
-				<c:for key="t" map="boostStatisTypes" value="m" varClassName="tm">
+				<c:for key="t" map="boostStatisTypes" value="m" varClassName="lse">
                     <h3>{getTrMultStatisTypes(t;;)}</h3>
                     <br/>
                     <table>
