--- a/pokemonbean/resources_pk/rom/web/html/round/helpround.html
+++ b/pokemonbean/resources_pk/rom/web/html/round/helpround.html
@@ -692,7 +692,7 @@
 			<li><c:message value="msg_helpround,round_process_move_final_20"/></li>
 			<li>
 				<c:message value="msg_helpround,round_process_move_final_20_0"/>
-				<c:for key="d" map="lawsRates" value="l" varClassName="ctm">
+				<c:for key="d" map="lawsRates" value="l" varClassName="lse">
 					<ul>
 						<li>
 							{getTrLawRate(d;;)}<br/>
