--- a/pokemonbean/resources_pk/rom/web_fight/html/team.html
+++ b/pokemonbean/resources_pk/rom/web_fight/html/team.html
@@ -122,7 +122,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="m" map="healAfter" value="u" keyClassName='java.lang.String' varClassName="ntm">
+				<c:for key="m" map="healAfter" value="u" keyClassName='java.lang.String' varClassName="lse">
 					<c:for key="p" map="u;" value="s" keyClassName='java.lang.Byte' varClassName="aiki.game.fight.StacksOfUses">
 						<tr>
 							<td>{m;}</td>
@@ -158,7 +158,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="m" map="movesAnticipation" value="u" keyClassName='java.lang.String' varClassName="ntm">
+				<c:for key="m" map="movesAnticipation" value="u" keyClassName='java.lang.String' varClassName="lse">
 					<c:for key="p" map="u;" value="s" keyClassName='java.lang.Byte' varClassName="aiki.game.fight.Anticipation">
 						<tr>
 							<td>{m;}</td>
