--- a/pokemonbean/resources_pk/rom/web/html/simulation/simulation.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/simulation.html
@@ -20,19 +20,19 @@
 				<c:message value="msg_simulation,allow_switch_places"/>
 				<input c:varValue="allowedSwitchPlacesEndRound" name="allowedSwitchPlacesEndRound" type="checkbox"/><br/>
 				<c:message value="msg_simulation,win_trainer_exp"/>
-				<input c:validator="rate_validator" c:varValue="winTrainerExp" id="winTrainerExpRate" name="winTrainerExp" type="text"/><span c:for="winTrainerExpRate" class="errormessage" valueMessage="msg_simulation,rate_issue"> </span><br/>
+				<input c:validator="rate_validator" c:varValue="winTrainerExp" id="winTrainerExpRate" name="winTrainerExp" type="text"/><span c:for="winTrainerExpRate" class="errormessage" c:valueMessage="msg_simulation,rate_issue"> </span><br/>
 				<c:message value="msg_simulation,winning_exp_pts_fight"/>
-				<input c:validator="rate_validator" c:varValue="rateWinningExpPtsFight" id="winExpRateFight" name="rateWinningExpPtsFight" type="text"/><span c:for="winExpRateFight" class="errormessage" valueMessage="msg_simulation,rate_issue"> </span><br/>
+				<input c:validator="rate_validator" c:varValue="rateWinningExpPtsFight" id="winExpRateFight" name="rateWinningExpPtsFight" type="text"/><span c:for="winExpRateFight" class="errormessage" c:valueMessage="msg_simulation,rate_issue"> </span><br/>
 				<c:message value="msg_simulation,end_fight"/>
 				<input c:varValue="endFightIfOneTeamKo" name="endFightIfOneTeamKo" type="checkbox"/><br/>
 				<c:message value="msg_simulation,iv_player"/>
-				<input c:validator="short_validator" c:varValue="ivPlayer" id="ivPlayerId" name="ivPlayer" type="text"/><span c:for="ivPlayerId" class="errormessage" valueMessage="msg_simulation,short_issue"> </span><br/>
+				<input c:validator="short_validator" c:varValue="ivPlayer" id="ivPlayerId" name="ivPlayer" type="text"/><span c:for="ivPlayerId" class="errormessage" c:valueMessage="msg_simulation,short_issue"> </span><br/>
 				<c:message value="msg_simulation,iv_foe"/>
-				<input c:validator="short_validator" c:varValue="ivFoe" id="ivFoeId" name="ivFoe" type="text"/><span c:for="ivFoeId" class="errormessage" valueMessage="msg_simulation,short_issue"> </span><br/>
+				<input c:validator="short_validator" c:varValue="ivFoe" id="ivFoeId" name="ivFoe" type="text"/><span c:for="ivFoeId" class="errormessage" c:valueMessage="msg_simulation,short_issue"> </span><br/>
 				<c:message value="msg_simulation,rate_win_money_base"/>
-				<input c:validator="rate_validator" c:varValue="rateWinMoneyBase" id="rateWinMoneyBaseId" name="rateWinMoneyBase" type="text"/><span c:for="rateWinMoneyBaseId" class="errormessage" valueMessage="msg_simulation,rate_issue"> </span><br/>
+				<input c:validator="rate_validator" c:varValue="rateWinMoneyBase" id="rateWinMoneyBaseId" name="rateWinMoneyBase" type="text"/><span c:for="rateWinMoneyBaseId" class="errormessage" c:valueMessage="msg_simulation,rate_issue"> </span><br/>
 				<c:message value="msg_simulation,rate_win_money_loose"/>
-				<input c:validator="rate_validator" c:varValue="rateLooseMoneyWin" id="rateLooseMoneyWinId" name="rateLooseMoneyWin" type="text"/><span c:for="rateLooseMoneyWinId" class="errormessage" valueMessage="msg_simulation,rate_issue"> </span><br/>
+				<input c:validator="rate_validator" c:varValue="rateLooseMoneyWin" id="rateLooseMoneyWinId" name="rateLooseMoneyWin" type="text"/><span c:for="rateLooseMoneyWinId" class="errormessage" c:valueMessage="msg_simulation,rate_issue"> </span><br/>
 				<c:message value="msg_simulation,restored_moves"/>
 				<input c:varValue="restoredMovesEndFight" name="restoredMovesEndFight" type="checkbox"/><br/>
 				<c:message value="msg_simulation,closing"/>
@@ -86,10 +86,6 @@
 		</c:if>
 		<c:if condition="isFoeState()">
 			<c:if condition="freeTeams">
-				<c:message value="msg_simulation,multiplicity_fight"/>
-				<input c:varValue="multiplicity" name="multiplicity" type="text"/><br/>
-				<c:message value="msg_simulation,env_fight"/>
-				<c:select className="aiki.map.levels.enums.EnvironmentType" default="" map="environments" name="environment" update="" varValue="environment"/><br/>
 				<form action="" c:command="$addPkTrainer" method="post" name="addingpk">
 					<c:submit message="msg_simulation,add"/><br/>
 				</form>
@@ -130,13 +126,13 @@
 								</c:for>
 							</tbody>
 						</table>
-						<span c:for="foePkTable" class="errormessage" valueMessage="msg_simulation,unselected_pk"> </span><br/>
-						<input c:groupId="actionFoeRadios" c:validator="selected_radio" className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedFoeAction" type="radio" value="EDIT"/>
+						<span c:for="foePkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
+						<input c:groupId="actionFoeRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedFoeAction" type="radio" value="EDIT"/>
 						<c:message value="msg_simulation,edit"/><br/>
-						<input c:groupId="actionFoeRadios" c:validator="selected_radio" className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedFoeAction" type="radio" value="REMOVE"/>
+						<input c:groupId="actionFoeRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedFoeAction" type="radio" value="REMOVE"/>
 						<c:message value="msg_simulation,remove"/><br/>
 						<c:submit message="msg_simulation,select"/>
-						<span c:for="actionFoeRadios" class="errormessage" valueMessage="msg_simulation,unselected_action"> </span><br/>
+						<span c:for="actionFoeRadios" class="errormessage" c:valueMessage="msg_simulation,unselected_action"> </span><br/>
 					</fieldset>
 				</form>
 				<form action="" c:command="$selectAllyPk" method="post" name="tableallypk">
@@ -176,13 +172,13 @@
 								</c:for>
 							</tbody>
 						</table>
-						<span c:for="allyPkTable" class="errormessage" valueMessage="msg_simulation,unselected_pk"> </span><br/>
-						<input c:groupId="actionAllyRadios" c:validator="selected_radio" className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAllyAction" type="radio" value="EDIT"/>
+						<span c:for="allyPkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
+						<input c:groupId="actionAllyRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAllyAction" type="radio" value="EDIT"/>
 						<c:message value="msg_simulation,edit"/><br/>
-						<input c:groupId="actionAllyRadios" c:validator="selected_radio" className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAllyAction" type="radio" value="REMOVE"/>
+						<input c:groupId="actionAllyRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAllyAction" type="radio" value="REMOVE"/>
 						<c:message value="msg_simulation,remove"/><br/>
 						<c:submit message="msg_simulation,select"/>
-						<span c:for="actionAllyRadios" class="errormessage" valueMessage="msg_simulation,unselected_action"> </span><br/>
+						<span c:for="actionAllyRadios" class="errormessage" c:valueMessage="msg_simulation,unselected_action"> </span><br/>
 					</fieldset>
 				</form>
 			</c:if>
@@ -213,6 +209,10 @@
 			</form>
 			<c:if condition="freeTeams">
 				<form action="" c:command="$validateFoeChoiceFree" method="post" name="ok">
+					<c:message value="msg_simulation,multiplicity_fight"/>
+					<input c:varValue="multiplicity" name="multiplicity" type="text"/><br/>
+					<c:message value="msg_simulation,env_fight"/>
+					<c:select className="aiki.map.levels.enums.EnvironmentType" default="" map="environments" name="environment" update="" varValue="environment"/><br/>
 					<c:submit message="msg_simulation,next_button"/>
 				</form>
 				<c:if condition="!ok">
@@ -273,13 +273,13 @@
 							</c:for>
 						</tbody>
 					</table>
-					<span c:for="pkTable" class="errormessage" valueMessage="msg_simulation,unselected_pk"> </span><br/>
-					<input c:groupId="actionRadios" c:validator="selected_radio" className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAction" type="radio" value="EDIT"/>
+					<span c:for="pkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
+					<input c:groupId="actionRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAction" type="radio" value="EDIT"/>
 					<c:message value="msg_simulation,edit"/><br/>
-					<input c:groupId="actionRadios" c:validator="selected_radio" className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAction" type="radio" value="REMOVE"/>
+					<input c:groupId="actionRadios" c:validator="selected_radio" c:className="aiki.beans.facade.simulation.enums.TeamCrud" name="selectedAction" type="radio" value="REMOVE"/>
 					<c:message value="msg_simulation,remove"/><br/>
 					<c:submit message="msg_simulation,select"/>
-					<span c:for="actionRadios" class="errormessage" valueMessage="msg_simulation,unselected_action"> </span><br/>
+					<span c:for="actionRadios" class="errormessage" c:valueMessage="msg_simulation,unselected_action"> </span><br/>
 				</fieldset>
 			</form>
 			<br/>
@@ -396,7 +396,7 @@
 						</c:for>
 					</tbody>
 				</table>
-				<span c:for="pkTable" class="errormessage" valueMessage="msg_simulation,unselected_pk"> </span><br/>
+				<span c:for="pkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
 				<c:submit message="msg_simulation,select"/>
 			</form>
 			<c:if condition="selectedIndex()">
@@ -518,7 +518,7 @@
 						</c:for>
 					</tbody>
 				</table>
-				<span c:for="pkTable" class="errormessage" valueMessage="msg_simulation,unselected_pk"> </span><br/>
+				<span c:for="pkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
 				<c:message value="msg_simulation,round"/>
 				<c:select className="java.lang.Integer" default="" map="round" name="selectedRound" update="" varValue="selectedRound"/><br/>
 				<c:message value="msg_simulation,multiplicity"/>
@@ -638,7 +638,7 @@
 						</c:for>
 					</tbody>
 				</table>
-				<span c:for="pkTable" class="errormessage" valueMessage="msg_simulation,unselected_pk"> </span><br/>
+				<span c:for="pkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
 				<c:submit message="msg_simulation,select"/>
 			</form>
 			<c:if condition="selectedIndexForMoves()">
@@ -821,7 +821,7 @@
 						</c:for>
 					</tbody>
 				</table>
-				<span c:for="pkTable" class="errormessage" valueMessage="msg_simulation,unselected_pk"> </span><br/>
+				<span c:for="pkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
 				<c:message value="msg_simulation,round"/>
 				<c:select className="java.lang.Integer" default="" map="round" name="selectedRound" update="" varValue="selectedRound"/><br/>
 				<c:submit message="msg_simulation,select"/>
@@ -882,7 +882,7 @@
 							</c:for>
 						</tbody>
 					</table>
-					<span c:for="moveTable" class="errormessage" valueMessage="msg_simulation,unselected_move"> </span><br/>
+					<span c:for="moveTable" class="errormessage" c:valueMessage="msg_simulation,unselected_move"> </span><br/>
 					<c:message value="msg_simulation,ally_choice"/>
 					<input c:varValue="allyChoice" name="allyChoice" type="checkbox"/><br/>
 					<c:message value="msg_simulation,multiplicity"/>
@@ -1145,7 +1145,7 @@
 						</c:for>
 					</tbody>
 				</table>
-				<span c:for="pkTable" class="errormessage" valueMessage="msg_simulation,unselected_pk"> </span><br/>
+				<span c:for="pkTable" class="errormessage" c:valueMessage="msg_simulation,unselected_pk"> </span><br/>
 				<c:submit message="msg_simulation,select"/>
 			</form>
 			<c:if condition="selectedIndexForMoves()">
