improve meta rendering

--- a/pokemonbean/resources_pk/rom/web/html/map/level.html
+++ b/pokemonbean/resources_pk/rom/web/html/map/level.html
@@ -38,7 +38,7 @@
 	</head>
 	<body>
 		<a c:command="web/html/index.html" href=""><c:message value="msg_levelmap,index"/></a><br/>
-		<a c:command="web/html/map/map.html" href=""><c:message value="msg_levelmap,map"/></a>
+		<a c:command="web/html/map/map.html" href=""><c:message value="msg_levelmap,map"/></a><br/>
 		<div style="font-size: 0;">
 			<c:for key="p" map="tiles" value="b" varClassName='java.lang.String'>
 				<c:if condition="isFirstRow(p;;)">
