--- a/pokemonbean/resources_pk/rom/web/html/simulation/simulationlevel.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/simulationlevel.html
@@ -43,7 +43,7 @@
 			<input type="submit" value="OK"/>
 		</form>
 		<br/>
-		<a c:command="$cancel" href=""><c:message value="msg_levelsimu,cancel"/></a>
+		<a c:command="$cancel" href=""><c:message value="msg_levelsimu,cancel"/></a><br/>
 		<div style="font-size: 0;">
 			<c:for key="p" map="tiles" value="b" varClassName='java.lang.String'>
 				<c:if condition="isFirstRow(p;;)">
