--- a/belotebean/resources_cards/classes/en/cards/belote/rules.html
+++ b/belotebean/resources_cards/classes/en/cards/belote/rules.html
@@ -15,7 +15,7 @@
 	</c:if>
 	<h1>Allowed declaring</h1>
 	<ul>
-		<c:for var="b" list="encheresAutorisees" className='$BidBelote'>
+		<c:for var="b" list="encheresAutorisees" className='java.lang.String'>
 			<li>{b;}</li>
 		</c:for>
 	</ul>
@@ -30,7 +30,7 @@
 	<br/>
 	<h1>Allowed Bids at the beginning of the deal</h1>
 	<ul>
-		<c:for var="d" list="annoncesAutorisees" className='$DeclaresBelote'>
+		<c:for var="d" list="annoncesAutorisees" className='java.lang.String'>
 			<li>{d;}</li>
 		</c:for>
 	</ul>
