--- a/tarotbean/resources_cards/classes/fr/cards/tarot/detailsresults.html
+++ b/tarotbean/resources_cards/classes/fr/cards/tarot/detailsresults.html
@@ -18,7 +18,7 @@
 			<c:for var="l" list="linesDeclaring" className='cards.tarot.beans.SumDeclaringPlayer'>
 				<li>annonces de {l;nickname} ({l;status}): <br/>
 					<ul>
-						<c:for key="h" value="p" map="l;handfuls" keyClassName='$Handfuls' varClassName='java.lang.Short'>
+						<c:for key="h" value="p" map="l;handfuls" keyClassName='java.lang.String' varClassName='java.lang.Short'>
 							<li>{h;} : {p;}</li>
 						</c:for>
 						<c:for key="m" value="p" map="l;miseres" keyClassName='$Miseres' varClassName='java.lang.Short'>
@@ -114,7 +114,7 @@
 			<c:for var="l" list="linesDeclaring" className='cards.tarot.beans.SumDeclaringPlayer'>
 				<li>annonce de {l;nickname}: <br/>
 					<ul>
-						<c:for key="h" value="p" map="l;handfuls" keyClassName='$Handfuls' varClassName='java.lang.Short'>
+						<c:for key="h" value="p" map="l;handfuls" keyClassName='java.lang.String' varClassName='java.lang.Short'>
 							<li>{h;}</li>
 						</c:for>
 						<c:for key="m" value="p" map="l;miseres" keyClassName='$Miseres' varClassName='java.lang.Short'>
