--- a/belotebean/resources_cards/classes/fr/cards/belote/rules.html
+++ b/belotebean/resources_cards/classes/fr/cards/belote/rules.html
@@ -15,7 +15,7 @@
 	</c:if>
 	<h1>Annonces autoris&eacute;es</h1>
 	<ul>
-		<c:for var="b" list="encheresAutorisees" className='$BidBelote'>
+		<c:for var="b" list="encheresAutorisees" className='java.lang.String'>
 			<li>{b;}</li>
 		</c:for>
 	</ul>
@@ -30,7 +30,7 @@
 	<br/>
 	<h1>Ench&egrave;res autoris&eacute;es au d&eacute;but de la partie</h1>
 	<ul>
-		<c:for var="d" list="annoncesAutorisees" className='$DeclaresBelote'>
+		<c:for var="d" list="annoncesAutorisees" className='java.lang.String'>
 			<li>{d;}</li>
 		</c:for>
 	</ul>
