--- a/cardgamesgui/resources_cards/help/en/aide_generale/jeux/tarot/distribution.html
+++ b/cardgamesgui/resources_cards/help/en/aide_generale/jeux/tarot/distribution.html
@@ -11,11 +11,6 @@ the cards are dealt 3 by 3.<br/>
 The cards, hidden side, which make up the dog,<br/>
 are dealt card by card at any time,<br/>
 except for the first round and for the last round.<br/>
-The dealer deals in the counter clock wise.<br/>
-<br/>
-After all cards are dealt,<br/>
-if a player owns only the Small as trump card<br/>
-(It is said the Small is dried. The Excuse is, here, a trump card.) in the hand of the player,<br/>
-then the deal is cancelled. The cards are redealt, in this case.<br/>
+The dealer deals in the counter clock wise.
 </body>
 </html>
