--- a/cardgamesgui/resources_cards/help/fr/aide_generale/jeux/tarot/distribution.html
+++ b/cardgamesgui/resources_cards/help/fr/aide_generale/jeux/tarot/distribution.html
@@ -11,11 +11,6 @@ les cartes sont distribu&eacute;es 3 par 3.<br/>
 Les cartes, face cach&eacute;e, qui constituent le chien,<br/>
 sont distribu&eacute;es carte par carte &agrave; n''importe quel moment,<br/>
 sauf au premier tour et au dernier.<br/>
-Le donneur distribue dans le sens contraire des aiguilles d''une montre.<br/>
-<br/>
-Apr&egrave;s que toutes les cartes sont distribu&eacute;es,<br/>
-si un joueur ne poss&egrave;de que le Petit comme atout<br/>
-(On dit que le Petit est sec. L''Excuse est, ici, un atout.) dans sa main,<br/>
-alors la partie est annul&eacute;e. On redistribue les cartes, dans ce cas.<br/>
+Le donneur distribue dans le sens contraire des aiguilles d''une montre.
 </body>
 </html>
