--- a/tarotbean/resources_cards/classes/en/cards/tarot/results.html
+++ b/tarotbean/resources_cards/classes/en/cards/tarot/results.html
@@ -41,7 +41,7 @@
 				</c:if>
 
 			</li>
-			<li>Bid:<c:message value="$bidString()"/></li>
+			<li>Bid:{bidString()}</li>
 		</ul>
 		<h1>3 Results</h1>
 		<p>
