--- a/tarotbean/resources_cards/classes/fr/cards/tarot/results.html
+++ b/tarotbean/resources_cards/classes/fr/cards/tarot/results.html
@@ -41,7 +41,7 @@
 				</c:if>
 
 			</li>
-			<li>Ench&egrave;re:<c:message value="$bidString()"/></li>
+			<li>Ench&egrave;re:{bidString()}</li>
 		</ul>
 		<h1>3 R&eacute;sultats:</h1>
 		<p>
