add render tests

--- a/pokemonbean/resources_pk/rom/web/html/map/elements/trainer_multi_fight.html
+++ b/pokemonbean/resources_pk/rom/web/html/map/elements/trainer_multi_fight.html
@@ -16,7 +16,7 @@
 		<br/>
 		<c:img src="{imageMini}"/>
 		<br/>
-		<c:for list="getTeamsRewards()" var="t" indexclassName="$int">
+		<c:for list="getTeamsRewards()" var="t" indexClassName="$int">
 			{t;;}<br/>
 			<c:import page="{pageTeam}">
 				<c:package name="aiki.beans.map.pokemon">
