--- a/tarotbean/resources_cards/classes/en/cards/tarot/results.html
+++ b/tarotbean/resources_cards/classes/en/cards/tarot/results.html
@@ -23,7 +23,7 @@
 				</c:if> <c:if condition="!calledPlayers.isEmpty()">
 					<ul>
 						<c:for var="p" list="calledPlayers" className='java.lang.String'>
-							<li>{p;}</li>
+							<li>{p}</li>
 						</c:for>
 					</ul>
 				</c:if>
@@ -35,7 +35,7 @@
 				</c:if> <c:if condition="!calledCardsList.isEmpty()">
 					<ul>
 						<c:for var="c" list="calledCardsList" className='java.lang.String'>
-							<li>{c;}</li>
+							<li>{c}</li>
 						</c:for>
 					</ul>
 				</c:if>
@@ -113,16 +113,16 @@
 			<tr>
 				<td></td>
 				<c:for var="p" list="nicknames" className='java.lang.String'>
-					<td>{p;}</td>
+					<td>{p}</td>
 				</c:for>
 			</tr>
 		</thead>
 		<tbody>
 			<c:for var="l" list="linesDeal" className='cards.tarot.beans.LineDeal'>
 				<tr>
-					<td>{l;number}</td>
-					<c:for var="s" list="l;scores" className='java.lang.Long'>
-						<td>{s;}</td>
+					<td>{l.number}</td>
+					<c:for var="s" list="l.scores" className='java.lang.Long'>
+						<td>{s}</td>
 					</c:for>
 				</tr>
 			</c:for>
