--- a/belotebean/resources_cards/classes/en/cards/belote/detailsresults.html
+++ b/belotebean/resources_cards/classes/en/cards/belote/detailsresults.html
@@ -8,17 +8,17 @@
 	<ul>
 		<c:for var="p" list="declaring" className='cards.belote.beans.SumDeclaringPlayer'>
 			<li>
-				{p;nickname}''s declaring ({p;statut}):
-				<c:if condition="p;declaring.isEmpty()">
+				{p.nickname}''s declaring ({p.statut}):
+				<c:if condition="p.declaring.isEmpty()">
 					No thing
 				</c:if>
-				<c:if condition="!p;declaring.isEmpty()">
+				<c:if condition="!p.declaring.isEmpty()">
 					<br/>
 					<ul>
-						<c:for var="d" list="p;declaring" className='cards.belote.beans.DeclaringPlayerValue'>
-							<li>{d;declaring} : {d;value}</li>
+						<c:for var="d" list="p.declaring" className='cards.belote.beans.DeclaringPlayerValue'>
+							<li>{d.declaring} : {d.value}</li>
 						</c:for>
-						<li>Sum : {p;sum}</li>
+						<li>Sum : {p.sum}</li>
 					</ul>
 				</c:if>
 			</li>
