--- a/belotebean/resources_cards/classes/fr/cards/belote/detailsresults.html
+++ b/belotebean/resources_cards/classes/fr/cards/belote/detailsresults.html
@@ -8,17 +8,17 @@
 	<ul>
 		<c:for var="p" list="declaring" className='cards.belote.beans.SumDeclaringPlayer'>
 			<li>
-				Annonces de {p;nickname} ({p;statut}):
-				<c:if condition="p;declaring.isEmpty()">
+				Annonces de {p.nickname} ({p.statut}):
+				<c:if condition="p.declaring.isEmpty()">
 					Rien
 				</c:if>
-				<c:if condition="!p;declaring.isEmpty()">
+				<c:if condition="!p.declaring.isEmpty()">
 					<br/>
 					<ul>
-						<c:for var="d" list="p;declaring" className='cards.belote.beans.DeclaringPlayerValue'>
-							<li>{d;declaring} : {d;value}</li>
+						<c:for var="d" list="p.declaring" className='cards.belote.beans.DeclaringPlayerValue'>
+							<li>{d.declaring} : {d.value}</li>
 						</c:for>
-						<li>Somme : {p;sum}</li>
+						<li>Somme : {p.sum}</li>
 					</ul>
 				</c:if>
 			</li>
