--- a/tarotbean/resources_cards/classes/en/cards/tarot/detailsresults.html
+++ b/tarotbean/resources_cards/classes/en/cards/tarot/detailsresults.html
@@ -17,15 +17,15 @@
 		<h1>Calculation of players''s declaring</h1>
 		<ul>
 			<c:for var="l" list="linesDeclaring" className='cards.tarot.beans.SumDeclaringPlayer'>
-				<li>{l;nickname}''s declaring ({l;status}): <br/>
+				<li>{l.nickname}''s declaring ({l.status}): <br/>
 					<ul>
-						<c:for key="h" value="p" map="l;handfuls" keyClassName='java.lang.String' varClassName='java.lang.Short'>
-							<li>{h;} : {p;}</li>
+						<c:for key="h" value="p" map="l.handfuls" keyClassName='java.lang.String' varClassName='java.lang.Short'>
+							<li>{h} : {p}</li>
 						</c:for>
-						<c:for key="m" value="p" map="l;miseres" keyClassName='$Miseres' varClassName='java.lang.Short'>
-							<li>{m;} : {p;}</li>
+						<c:for key="m" value="p" map="l.miseres" keyClassName='$Miseres' varClassName='java.lang.Short'>
+							<li>{m} : {p}</li>
 						</c:for>
-						<li>Sum : {l;sum}</li>
+						<li>Sum : {l.sum}</li>
 					</ul>
 				</li>
 			</c:for>
@@ -49,9 +49,9 @@
 			<tbody>
 				<c:for var="l" list="playersScores" className='cards.tarot.beans.ScoresPlayers'>
 					<tr>
-						<td>{l;nickname}</td>
-						<td>{l;rate}</td>
-						<td>{l;score}</td>
+						<td>{l.nickname}</td>
+						<td>{l.rate}</td>
+						<td>{l.score}</td>
 					</tr>
 				</c:for>
 			</tbody>
@@ -74,12 +74,12 @@
 			<tbody>
 				<c:for var="l" list="orderedPlayers" className='cards.tarot.beans.RankingPlayerVariantGame'>
 					<tr>
-						<td>{l;nickname}</td>
-						<td>{l;positionDiff}</td>
-						<td>{l;positionOudlers}</td>
-						<td>{l;positionCharacters}</td>
-						<td>{l;positionStrengthCharacters}</td>
-						<td>{l;finalPosition}</td>
+						<td>{l.nickname}</td>
+						<td>{l.positionDiff}</td>
+						<td>{l.positionOudlers}</td>
+						<td>{l.positionCharacters}</td>
+						<td>{l.positionStrengthCharacters}</td>
+						<td>{l.finalPosition}</td>
 					</tr>
 				</c:for>
 			</tbody>
@@ -99,12 +99,12 @@
 			<tbody>
 				<c:for var="l" list="pointsPlayers" className='cards.tarot.beans.PointsPlayerVariantGame'>
 					<tr>
-						<td>{l;nickname}</td>
-						<td>{l;pointsTricks}</td>
-						<td>{l;minimumPoints}</td>
-						<td>{l;differenceScore}</td>
-						<td>{l;rate}</td>
-						<td>{l;score}</td>
+						<td>{l.nickname}</td>
+						<td>{l.pointsTricks}</td>
+						<td>{l.minimumPoints}</td>
+						<td>{l.differenceScore}</td>
+						<td>{l.rate}</td>
+						<td>{l.score}</td>
 					</tr>
 				</c:for>
 			</tbody>
@@ -112,13 +112,13 @@
 		<h1>Calculation of players''s declaring</h1>
 		<ul>
 			<c:for var="l" list="linesDeclaring" className='cards.tarot.beans.SumDeclaringPlayer'>
-				<li>{l;nickname}''s declaring: <br/>
+				<li>{l.nickname}''s declaring: <br/>
 					<ul>
-						<c:for key="h" value="p" map="l;handfuls" keyClassName='java.lang.String' varClassName='java.lang.Short'>
-							<li>{h;}</li>
+						<c:for key="h" value="p" map="l.handfuls" keyClassName='java.lang.String' varClassName='java.lang.Short'>
+							<li>{h}</li>
 						</c:for>
-						<c:for key="m" value="p" map="l;miseres" keyClassName='$Miseres' varClassName='java.lang.Short'>
-							<li>{m;}</li>
+						<c:for key="m" value="p" map="l.miseres" keyClassName='$Miseres' varClassName='java.lang.Short'>
+							<li>{m}</li>
 						</c:for>
 					</ul>
 				</li>
@@ -136,8 +136,8 @@
 			<tbody>
 				<c:for var="l" list="bonuses" className='cards.tarot.beans.BonusesPlayers'>
 					<tr>
-						<td>{l;nickname}</td>
-						<td>{l;bonus}</td>
+						<td>{l.nickname}</td>
+						<td>{l.bonus}</td>
 					</tr>
 				</c:for>
 			</tbody>
